# GL3EngineEZR

./: GL3Engine.opensdf  GL3Engine.sln
Debug/: GL3EngineCore.ilk
GL3EngineCore/: CMakeLists.txt  Camera.cpp  Camera.h  GL3EngineCore.vcxproj  GL3EngineCore.vcxproj.filters  LPVApp.cbp  LPVApp.cpp  LPVApp.depend  LPVApp.h  LPVApp.layout  LPVApp.workspace  LightSource.cpp  LightSource.h  Mesh.cpp  Mesh.h  MultipleRenderTarget.cpp  MultipleRenderTarget.h  Node.cpp  Node.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  common.h  main.cpp  main_unix.inl  main_win.inl  shader.cpp  shader.h
GL3EngineCore/Debug/: CL.read.1.tlog  CL.write.1.tlog  GL3EngineCore.lastbuildstate  GL3EngineCore_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
GL3EngineCore/models/: Cornell.blend  Floor.blend  coord.blend  cube.blend  dragon.blend  relativitystairs.blend
GL3EngineCore/shader/: Modelshader.frag  Modelshader.vert  NotSimpleFP.frag  NotSimpleVP.vert  finalFP.frag  finalVP.vert  gatherFP.frag  gatherVP.vert  injectionFP.frag  injectionVP.vert  outputFP.frag  outputFP_save.frag  outputVP.vert  simpleFP.frag  simpleVP.vert
GL3EngineCore/textures/: Box.tga  coordtex.tga  dragontex.tga  dragontex2.tga  dragontexUC.tga  randMap.tga  whiteTiles.tga
TestProject/glfw_test/: common.h  glfw_test.cbp  glfw_test.cpp  glfw_test.depend  glfw_test.h  glfw_test.layout  glfw_test.workspace  main.cpp  shader.cpp  shader.h  simpleFP.frag  simpleVP.vert
win32inc/GL/.svn/: all-wcprops  entries
win32inc/assimp/.svn/: all-wcprops  entries
win32inc/assimp/Compiler/.svn/: all-wcprops  entries
win32inc/glm/.svn/: all-wcprops  entries
win32inc/glm/core/.svn/: all-wcprops  entries
win32inc/glm/gtc/.svn/: all-wcprops  entries
win32inc/glm/gtx/.svn/: all-wcprops  entries
win32inc/glm/virtrev/.svn/: all-wcprops  entries
